[project]
name = "csm-agent"
version = "0.1.0"
description = "Customer Service Management Agent for Restack"
authors = [ { name = "Your Name", email = "your@email.com" } ]
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "restack-ai>=0.0.81",
    "openai",
]

[project.scripts]
start = "uvicorn csm-agent:app --host 0.0.0.0 --port $PORT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["csm_agent"] 