[project]
name = "csm-agent"
version = "0.1.0"
description = "Customer Service Management Agent for Restack"
authors = [ { name = "max schleper", email = "m@mslep.com" } ]
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "restack-ai>=0.0.81",
    "openai",
]

[project.scripts]
start = "source venv/bin/activate && python csm_agent/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["csm_agent"] 